# VCTI_AIRI_mod

./: .gitignore  README.md
.postman/: resources.yaml
AIRI/: index.html  package-lock.json  package.json  vite.config.ts
AIRI/src/: App.tsx  ProtectedRoute.tsx
AIRI/src/components/: JDInput.tsx  ResultTable.tsx  ResumeUpload.tsx
AIRI/src/data/: mockData.ts
AIRI/src/layout/: AppLayout.tsx  SideBar.tsx
AIRI/src/pages/: Dashboard.tsx  Login.tsx  Results.tsx  UploadJD.tsx  UploadResume.tsx
AIRI/src/services/: api.ts  authFetch.ts  (+1 more)
myproject/: README.md  pyproject.toml
myproject/app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
myproject/app/routers/: auth.py  job_description.py  results.py  resumes.py  screening.py  user.py
myproject/app/services/: resume_structure.json
myproject/app/services/ai/: ollama_server.py
myproject/app/services/ai/embedding/: embedding_provider.py  embedding_service.py
myproject/app/services/ai/llm/: llm_provider.py  llm_service.py
myproject/app/services/core/: json_section_filler.py  resume_db_mapper.py  resume_deduplication.py  section_mapper.py  template_loader.py
myproject/app/services/parsing/: pdf_parser.py
myproject/app/services/pipeline/: chain_builder.py  resume_db_mapper.py  runnable_factory.py
myproject/app/services/prompt_templates/: arrange.py  prompts.py  screen.py  structure.py
myproject/app/services/screening/: retriever.py  screen_chain.py
myproject/tests/: test_resume_upload_batch_dedup.py
postman/environments/: New Environment.environment.yaml
(+1 files in other folders)
