[project]
name = "myproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt<4.1",
    "docling>=2.78.0",
    "fastapi[all]>=0.131.0",
    "langchain>=1.2.11",
    "langchain-ollama>=1.0.1",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pymupdf>=1.27.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.46",
]
